# image-search-with-words

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
src/: captions.py  config.py  db_handler.py  utils.py
