[tool.poetry]
name = "image-search-with-words"
version = "0.1.0"
description = ""
authors = ["Rohith04MVK <rohithkbobby04@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
transformers = "^4.41.2"
torch = "^2.3.1"
chromadb = "^0.5.3"
protobuf = "3.20"
sentence-transformers = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
